# deep-graph-matching

./: .gitignore  README.md  main.py  params.json  pyproject.toml  setup.py
gnn_ged/: calc_embedding_distances.py  calc_matrix_distances.py  model_arch.py  train_model.py
gnn_ged/assignment/: calc_assignment.py  calc_embedding_distances.py
gnn_ged/edit_cost/: calc_edit_cost.py
gnn_ged/evaluation/: classify.py  graph_classification.py  knn_classifier.py  svm_classifier.py
gnn_ged/heuristics/: convex_hull.py  nearest_neighbor.py  nearest_node_matching.py
gnn_ged/models/: gat.py  gcn.py  gin.py  gsage.py  model_arch.py
gnn_ged/training/: finetune_model.py  optimize_parameters.py  run_kfold_cv.py  train_model.py
gnn_ged/utils/: calc_graph_kernels.py  plot.py  shortest_paths.py  split_dataset.py  write_graphml.py
gnnged/assignment/: calc_assignment.py
gnnged/edit_cost/: calc_edit_cost.py
gnnged/evaluation/: knn_classifier.py  svm_classifier.py
gnnged/heuristics/: convex_hull.py  data_utils.py  hull_evaluation.py  hull_matching.py  hull_utils.py  nearest_node_matching.py  nearest_node_utils.py  prototype_selection.py  (+1 more)
scripts/: run_evaluation.py  run_finetuning.py  run_matching.py  run_preprocessing.py  run_training.py
src/: CMakeLists.txt  calc_edit_cost.py  calc_embedding_distances.py  calc_greedy_assignment.cpp  calc_matrix_distances.py  classify.py  model_arch.py  run_kfold_cv.py
src/__pycache__/: node_mapping_distance.c-33.py310.1.nbc  node_mapping_distance.c-33.py310.nbi
tests/: test_classify.py  test_edit_cost.py  test_hull_features.py
(+9 files in other folders)
